--- a/u/ul/ule/ulead.com.html
+++ b/u/ul/ule/ulead.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ulead.com privacy policy that was archived on 2001-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011217004916id_/http%3A//www.ulead.com/aboutulead/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ulead.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605190818id_/http%3A//www.ulead.com/aboutulead/privacy.htm) for the most accurate reproduction.-->
 
 <html><!-- #BeginTemplate "/Templates/aboutulead.dwt" --><head>
 <!-- #BeginEditable "doctitle" --> 
@@ -23,7 +23,7 @@ body
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tbody><tr> 
     <td rowspan="2" width="150"><img src="../images/UleadLogo.gif" width="150" height="92" border="0" usemap="#Map"><map name="Map"><area shape="rect" coords="25,3,149,64" href="../runme.htm" alt="Back to Ulead Home " title="Back to Ulead Home "></map></td>
-    <td bgcolor="000066"><img src="../images/top2.gif" height="43" width="600" usemap="#Map3" border="0"><map name="Map3"><area shape="rect" coords="192,11,300,36" href="http://www.ulead.com/store/cart.htm" alt="View the Contents of My Shopping Cart" title="View the Contents of My Shopping Cart"><area shape="rect" coords="538,12,595,37" href="../search/search.htm" alt="Search the Ulead Web Site" title="Search the Ulead Web Site"><area shape="rect" coords="438,14,525,36" href="aboutulead.htm" alt="Newsletters, Company Profile" title="Newsletters, Company Profile"><area shape="rect" coords="311,12,427,37" href="http://partner.ulead.com/runme.htm" alt="Partner Products Home" title="Partner Products Home"></map></td>
+    <td bgcolor="000066"><img src="../images/top2.gif" height="43" width="600" usemap="#Map3" border="0"><map name="Map3"><area shape="rect" coords="192,11,300,36" href="../store/cart.htm" alt="View the Contents of My Shopping Cart" title="View the Contents of My Shopping Cart"><area shape="rect" coords="538,12,595,37" href="../search/search.htm" alt="Search the Ulead Web Site" title="Search the Ulead Web Site"><area shape="rect" coords="438,14,525,36" href="aboutulead.htm" alt="Newsletters, Company Profile" title="Newsletters, Company Profile"><area shape="rect" coords="311,12,427,37" href="http://partner.ulead.com/runme.htm" alt="Partner Products Home" title="Partner Products Home"></map></td>
     <td bgcolor="000066" width="100%">&nbsp;</td>
   </tr>
   <tr> 
@@ -178,25 +178,22 @@ body
                           <p class="bodytext"><span class="subhead">Information 
                             Collection and Use</span><br>
                             Ulead is the sole owner of the information collected 
-                            on this site. We collect information from our users 
-                            at several different points on our Web site. We will 
-                            not sell, share, or rent this information to others 
-                            in ways different from what is disclosed in this statement. 
-                          </p>
+                            on this Web site. Any information collected from our 
+                            users will not be sold, shared, or rented to others 
+                            in ways different from what is disclosed in this statement.</p>
                           <p class="bodytext"><span class="subhead">Ulead Member 
                             and Product Registration</span><br>
                             To become a Ulead member or register a product, a 
                             user must first successfully complete a registration 
-                            form. During registration, a user is required to provide 
-                            information (such as name, e-mail address and product 
-                            serial number). This information is used to provide 
-                            the user about the services on our site for which 
-                            he/she has expressed interest. It is optional for 
-                            the user to give demographic information (such as 
-                            gender, address or occupation), but encouraged, so 
-                            that we can provide a more tailored experience on 
-                            our site. To confirm registrations, we send all new 
-                            members and product registrants a welcoming e-mail.</p>
+                            form with information such as name, e-mail address 
+                            and product serial number. This data is used to provide 
+                            information about the services on our site for which 
+                            the user has expressed an interest. It is optional 
+                            for the user to give demographic information (such 
+                            as gender, address or occupation), but encouraged, 
+                            so that we can provide a more tailored experience 
+                            on our site. To confirm registration, we send all 
+                            new members and product registrants a welcoming e-mail.</p>
                           <p class="bodytext"><span class="subhead">Online Purchases</span><br>
                             We use an outside company, Buyonet, to ship orders 
                             and process credit cards. This company does not retain, 
@@ -206,10 +203,12 @@ body
                             to provide contact information (e.g. name and address) 
                             and payment information (e.g. credit card number, 
                             expiration date). This information is used for billing 
-                            purposes, to fill customer's orders and may be used 
-                            for future promotional offers. If we have trouble 
-                            processing an order, this contact information will 
-                            be used to get in touch with the user. </p>
+                            purposes, to fill customer's orders and, if the customer 
+                            chooses, may be used for future promotional offers. 
+                            If we have trouble processing an order, this contact 
+                            information will be used to get in touch with the 
+                            user.<br>
+                          </p>
                           <p class="bodytext"><span class="subhead">Cookies</span><br>
                             A cookie is a piece of data stored on the user's hard 
                             drive containing information about the user. Usage 
@@ -224,7 +223,8 @@ body
                             Cookies can also enable us to track and target the 
                             interests of our users to further enhance the experience 
                             on our site. Rejecting a cookie will limit users to 
-                            some areas of our site. </p>
+                            some areas of our site.<br>
+                          </p>
                           <p class="bodytext"><span class="subhead">Log Files</span><br>
                             We use IP addresses to analyze trends, administer 
                             the site, track user's movement, and gather broad 
@@ -235,19 +235,17 @@ body
                             with our partners and advertisers. This is NOT linked 
                             to any personal information that can identify any 
                             individual person.</p>
-                          <p class="bodytext">As mentioned above, online orders 
-                            are processed by an outside company called Buyonet. 
-                            This company does not retain, share, store or use 
-                            personally identifiable information for any secondary 
-                            purposes.</p>
-                          <p class="bodytext">Also, we sometimes partner with 
-                            another party to provide specific services. When the 
-                            user signs up for these specific services, we will 
-                            share ONLY information that is necessary for the third 
-                            party to provide these specific services. These third 
-                            parties are not allowed to use personally identifiable 
-                            information except for the purpose of providing these 
-                            services.</p>
+                          <p class="bodytext">As mentioned above, an outside company 
+                            called Buyonet processes online orders. This company 
+                            does not retain, share, store or use personally identifiable 
+                            information for any secondary purposes.</p>
+                          <p class="bodytext">Sometimes we partner with another 
+                            party to provide specific services. When the user 
+                            signs up for these specific services, we will share 
+                            ONLY information that is necessary for the third party 
+                            to provide these specific services. These third parties 
+                            are not allowed to use personally identifiable information 
+                            except for the purpose of providing these services.</p>
                           <p class="bodytext"><span class="subhead">Links</span><br>
                             This Web site contains links to other sites. Please 
                             be aware that we are not responsible for the privacy 
@@ -260,7 +258,7 @@ body
                           <p class="bodytext"><span class="subhead">Newsletters</span><br>
                             If a user wishes to subscribe to our News Flash or 
                             Product Updates, we only ask for the user's e-mail 
-                            address. </p>
+                            address.</p>
                           <p class="bodytext"><span class="subhead">Surveys &amp; 
                             Contests</span><br>
                             From time-to-time our site will request information 
@@ -274,7 +272,20 @@ body
                             be used to notify the winners and award prizes. Survey 
                             information will be used for purposes of monitoring 
                             or improving the use and satisfaction of this site.</p>
-                          <p class="bodytext"><span class="subhead">Security</span><br>
+                          <p class="bodytext"><span class="subhead">Trial Downloads<br>
+                            </span>Many Ulead products have trial software available 
+                            for downloading. During the trial download process, 
+                            the user has a choice to opt-in or -out of certain 
+                            options. For example, these may include the option 
+                            to receive occasional Ulead product news and special 
+                            offers via e-mail.</p>
+                          <p class="bodytext"> After a user downloads a software 
+                            trial, only two follow-up e-mails will be sent. The 
+                            first to confirm the trial download and the second 
+                            to remind the user the end of the trial is nearing. 
+                            There will be no subsequent mailings related to the 
+                            download, unless you choose to sign up for them.</p>
+                          <p class="bodytext"><span class="subhead"> Security</span><br>
                             This Web site takes every precaution to protect our 
                             users' information. When users submit sensitive information 
                             via the Web site, your information is protected both 
@@ -283,12 +294,13 @@ body
                             asks users to enter sensitive information (such as 
                             credit card number and/or social security number), 
                             that information is protected with the best encryption 
-                            software in the industry: SSL. While on a secure page, 
-                            such as our order form, the lock icon on the bottom 
-                            of Web browsers such as Netscape Navigator and Microsoft 
-                            Internet Explorer becomes locked, as opposed to unlocked, 
-                            or open, when you are just 'surfing'. To learn more 
-                            about SSL, follow this link <a href="http://www.verisign.com/site/ssl.html">http://www.verisign.com/site/ssl.html 
+                            software in the industry: Secure Sockets Layer (SSL). 
+                            While on a secure page, such as our order form, the 
+                            lock icon on the bottom of Web browsers such as Netscape® 
+                            Navigator and Microsoft® Internet Explorer becomes 
+                            locked, as opposed to unlocked, or open, when you 
+                            are just 'surfing'. To learn more about SSL, follow 
+                            this link <a href="http://www.verisign.com/site/ssl.html">http://www.verisign.com/site/ssl.html 
                             </a></p>
                           <p class="bodytext">At Ulead, we also do everything 
                             in our power to protect user information off-line. 
@@ -312,27 +324,30 @@ body
                             to <a href="mailto:privacy@ulead.com">privacy@ulead.com. 
                             </a></p>
                           <p class="bodytext"><span class="subhead">Special Offers</span><br>
-                            Upon their requests, established members will occasionally 
-                            receive information on products, services, special 
+                            Due to their request, established members will occasionally 
+                            receive information about products, services, special 
                             deals, and a News Flash. Out of respect for the privacy 
-                            of our users, we present the option to not receive 
-                            these types of communications. For more details on 
-                            this, please see Choice/Opt-out heading below.</p>
-                          <p class="bodytext"><span class="subhead">Correction/Updating 
+                            of our users, we provide the option to discontinue 
+                            these types of communications. For more details, please 
+                            see the Choice/Opt-out paragraph below.</p>
+                          <p class="bodytext"><span class="subhead">Modifying/Updating 
                             Personal Information</span><br>
                             If a user's personally identifiable information changes 
-                            (such as your zip code), or if a user no longer desires 
+                            (such as the postal code) or if a user no longer desires 
                             our service, we provide a way to correct, update or 
-                            remove that user's personal data provided to us. This 
-                            is done at the member information page. </p>
+                            remove that user's personal data. This is done at 
+                            the member information page.</p>
                           <p class="bodytext"><span class="subhead">Choice/Opt-out</span><br>
                             Our users are given the opportunity to 'opt-out' of 
                             having their information used for purposes not directly 
                             related to our site at the point where we ask for 
-                            the information. For example, our order form has an 
-                            'opt-out' mechanism so users who buy a product from 
-                            us but don't want any marketing material can keep 
-                            their e-mail address off of our lists. </p>
+                            the information. These types of options may include 
+                            receiving product specific news, 3rd party contact, 
+                            or even adding your e-mail address to a contest list. 
+                            For example, our order form has an opt-in/opt-out 
+                            check box, so users who prefer not to receive any 
+                            marketing material or product updates can keep their 
+                            e-mail address off of our lists.</p>
                           <p class="bodytext">Users who no longer wish to receive 
                             our newsletter or promotional materials from our partners 
                             may opt-out of receiving these communications by replying 
@@ -346,12 +361,12 @@ body
                             use it, and under what circumstances, if any, we disclose 
                             it. If at any point we decide to use personally identifiable 
                             information in a manner different from that stated 
-                            at the time it was collected, we will notify users 
+                            at the time it was collected, we would notify users 
                             by way of an e-mail. Users will have a choice as to 
                             whether or not we use their information in this different 
                             manner. We will use information in accordance with 
                             the privacy policy under which the information was 
-                            collected. </p>
+                            collected.</p>
                           <p><br>
                           </p>
                         </div>
@@ -375,10 +390,10 @@ body
     <td width="100%">&nbsp;</td>
   </tr>
   <tr> 
-    <td height="25" bgcolor="#000066"><!-- #BeginEditable "counter" --><img src="http://www.ulead.com.tw/ulead/counter/Nctr.cfm?site=English&amp;group=aboutulead&amp;product=aboutulead&amp;page=privacy" height="1" width="1"><!-- #EndEditable --></td>
+    <td height="25" bgcolor="#000066"><!-- #BeginEditable "counter" --><img src="http://dynamic.ulead.com/ulead/counter/Nctr.asp?site=English&amp;group=aboutulead&amp;product=aboutulead&amp;page=privacy" height="1" width="1"><!-- #EndEditable --></td>
     <td height="25" bgcolor="#000066">&nbsp;</td>
     <td valign="middle" align="center" height="25" width="580" bgcolor="#000066"><!-- #BeginLibraryItem "/Library/Nav_bottom.lbi" --><span class="copyright">Copyright <img src="../images/c.gif" width="9" height="9"> 
-2001, Ulead Systems, Inc. All rights reserved. | <a href="terms.htm" class="copyright"><span class="copyright">Terms 
+2002, Ulead Systems, Inc. All rights reserved. | <a href="terms.htm" class="copyright"><span class="copyright">Terms 
 of Use</span></a> | <a href="privacy.htm" class="copyright"><span class="copyright">Privacy 
 Statement</span></a></span><!-- #EndLibraryItem --></td>
     <td width="100%" height="25" bgcolor="#000066">&nbsp;</td>
