--- a/s/sc/sch/schooldude.com.html
+++ b/s/sc/sch/schooldude.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the schooldude.com privacy policy that was archived on 2001-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011214011718id_/http%3A//schooldude.com/infctr/infctr-privacypolicy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the schooldude.com privacy policy that was archived on 2002-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020606020932id_/http%3A//www.schooldude.com/infctr/infctr-privacypolicy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy - Info Center</title><meta name="keywords" content=""><meta name="description" content="SchoolDude.com is the premier home on the Internet for the professionals that provide excellent school facilities. SchoolDude.com will excel at community, content, and commerce for school operations and facilities."><meta name="ROBOTS" content="">
@@ -98,13 +98,13 @@ function MM_swapImage() { //v3.0
 		  </option><option value="/vip/v_hafa_s/vp-halloffame.asp">-- Hall of Fame &amp; Shame 
 		  </option><option value="/vip/v_prio/prio-default.asp">-- Product Locate 
 		  </option><option value="/mrkt/mrkt-marketplace.asp">Market Place 
-		  </option><option value="/mrkt/mrkt-asset-resale.asp">-- Sell Used Buses
 		  </option><option value="/forum/user/mrkt/m_bidshop_s/list.asp?forumid=50&amp;src=qnav">-- BidShop
 		  </option><option value="/mrkt/m_boma_s/mrkt-booksmaterials.asp">-- Books &amp; Materials 		   
 		  </option><option value="/mrkt/mrkt-vendorlocate.asp">-- Vendor Locate 
 		  </option><option value="/toolbox/mydt-toolbox.asp">ToolBox 
-		  </option><option value="/toolbox/mydt-customersurveys.asp">-- SurveyDirect
-		  </option><option value="/toolbox/mydtwo/mddefault.asp">-- MaintenanceDirect		  
+		  </option><option value="/toolbox/mydtwo/mddefault.asp">-- MaintenanceDirect
+		  </option><option value="/toolbox/mydtpm/pmddefault.asp">-- PM Direct
+		  </option><option value="/toolbox/mydt-customersurveys.asp">-- SurveyDirect	  
 		  </option><option value="/toolbox/mydt-calculators.asp">-- Calculators 
 		  </option><option value="/knwh/knwh-knowledgewarehouse.asp">Knowledge Warehouse 
 		  </option><option value="/knwh/knwh-filelibrary.asp">-- File Library 
@@ -158,28 +158,9 @@ function MM_swapImage() { //v3.0
           </td>
 			<!--form method=post action="/search.asp"-->
 		    <td colspan="3" valign="top" align="left" bgcolor="#ffffff">
-			
-<!--Start SEARCHBUTTON Search Box --> 
-<form action="http://search.searchbutton.com/search" method="get" id="sb_search" name="sb_search">
-  <input type="hidden" name="Site" value="230933175">
-  <table border="0" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF">
-    <tbody><tr> 
-      <td valign="middle"><font face="Verdana, Arial, Helvetica, sans-serif" size="1"> 
-        </font></td>
-      <td height="28" align="left" nowrap="" valign="top"><img src="/graphics/searchsite4.gif" height="28" name="SearchSite" width="81"></td>
-      <td align="left" nowrap="" valign="bottom" height="28"> <font face="Verdana, Arial, Helvetica, sans-serif" size="1"></font> 
-        <input type="text" name="query">
-      </td>
-      <td valign="bottom" align="right" height="28"> 
-        <input type="image" src="http://www.searchbutton.com/images/logoSearchbutton.gif" width="22" height="23" border="0" alt="Search" id="image3" name="image3" align="bottom">
-      </td>
-    </tr>
-  </tbody></table>
-</form>
-<!--End SEARCHBUTTON Search Box --> 
-</td>
+			</td>
 		  <td valign="top" align="right" width="30%"><font size="-2" face="Arial, Helvetica, sans-serif"> 
-			THURSDAY,&nbsp;DECEMBER&nbsp;13TH&nbsp;&nbsp;<br>
+			WEDNESDAY,&nbsp;JUNE&nbsp;5TH&nbsp;&nbsp;<br>
 <script language="JavaScript">
 <!--
 /******************************************************************
@@ -576,7 +557,7 @@ window.open("/askdude.asp","askdude","width=430,height=360,left=100,right=100")
     webmaster@schooldude.com</a> </font></p>
 
   <p><font size="-2" face="Arial, Helvetica, sans-serif"> <a href="/infctr/copyright.asp" onmouseover="window.status='Copyright'; return true;" target="_top">Copyright</a> 
-    © 1999-2001 SchoolDude.com, Inc. All Rights Reserved. <a href="/infctr/copyright.asp" onmouseover="window.status='Legal Stuff'; return true;" target="_top">Legal 
+    © 1999-2002 SchoolDude.com, Inc. All Rights Reserved. <a href="/infctr/copyright.asp" onmouseover="window.status='Legal Stuff'; return true;" target="_top">Legal 
     Stuff</a></font> </p>
   <p>&nbsp;</p>
 </center>
@@ -584,6 +565,78 @@ window.open("/askdude.asp","askdude","width=430,height=360,left=100,right=100")
 
 <!-- End of the Body for this Page --> 
 </td></tr></tbody></table>
+
+	<script language="JavaScript1.2">
+	// ORDER Set ORDER equal Article Title + Article Date.
+	var ORDER= "";
+	var CONTENTGROUP= "Info";
+	</script>
+	<!--- START OF WEBTRENDS LIVE TAG INSERTION --->
+<!--- Copyright 1999-2000 WebTrends Corporation --->
+
+<!--- Visit our corporate website at http://www.webtrends.com --->
+<!--- Visit our Webtrends Live website at http://www.webtrendslive.com --->
+<!--- eCommerce Revenue Tracking (patent pending) --->
+
+
+<script language="JavaScript1.2">
+	var SERVER= "www.SchoolDude.com";
+	var ORDER= "";
+
+//var CONTENTGROUP= "Dude Cafe";  <-- Set in the page calling this as an include.  04-28-00 JLB
+
+// You may customize the values of the above three variables to suit your website.
+// Simply insert your own values between the double-quotes.
+// The lines below show some examples:
+//   var ORDER= "D2,Business to Consumer,Pocket FM Radio,Audio Products,10,499.99;";
+//   var SERVER= "Name of this web server";
+//   var CONTENTGROUP = "Content group name for this page";
+</script>
+
+<!--- Modification of this code is not allowed and will permanently disable
+your account! --->
+
+<script language="JavaScript">
+<!--
+// Modification of this code is not allowed and will permanently disable your account!
+// SiteName: SchoolDude.com
+var W="tagver=3&SiteId=2740&Sid=001-00-3-9-107326-7863&Tz=-500&firstwkday=sunday&Edition=enterprise&Button=";
+W+="&server="+escape(SERVER);
+W+="&order="+escape(ORDER);
+W+="&Group="+escape(CONTENTGROUP);
+W+="&browserDate="+escape( Date());
+W+="&title="+escape(document.title);
+W+="&url="+window.document.URL;
+W+="&referrer="+window.document.referrer;
+W+="&appname="+escape(navigator.appName);
+W+="&appversion="+escape(navigator.appVersion);
+W+="&cookieOK="+(navigator.cookieEnabled?"Yes":"No");
+W+="&userLanguage="+(navigator.appName=="Netscape"?navigator.language:navigator.userLanguage);
+W+="&platform="+navigator.platform;
+W+="&bgColor="+escape(document.bgColor);
+if(typeof(screen)=="object")
+{
+W+="&screenResolution="+screen.width+"x"+screen.height;
+W+="&colorDepth="+screen.colorDepth;
+W+="&javaOK="+(navigator.javaEnabled()?"Yes":"No");
+W+="&NSpluginList=";
+for( var i=0; i< navigator.plugins.length; i++)
+W+=escape(navigator.plugins[i].name)+";";
+}
+document.write('<A TARGET="_blank" HREF="http://www.webtrendslive.com/redirect.asp?siteID=2740">');
+document.write('<IMG BORDER="0" WIDTH="1" HEIGHT="1" SRC="http://statse.webtrendslive.com/S001-00-3-9-107326-7863/button3.asp?'+W+'">');
+document.write('</A>');
+//-->
+</script><a target="_blank" href="http://www.webtrendslive.com/redirect.asp?siteID=2740"><img border="0" width="1" height="1" src="http://statse.webtrendslive.com/S001-00-3-9-107326-7863/button3.asp?tagver=3&amp;SiteId=2740&amp;Sid=001-00-3-9-107326-7863&amp;Tz=-500&amp;firstwkday=sunday&amp;Edition=enterprise&amp;Button=&amp;server=www.SchoolDude.com&amp;order=&amp;Group=Info&amp;browserDate=Fri%20Jan%2031%202020%2023%3A53%3A43%20GMT+0000%20%28Coordinated%20Universal%20Time%29&amp;title=Privacy%20Policy%20-%20Info%20Center&amp;url=https://web.archive.org/web/20020606020932id_/http%3A//www.schooldude.com/infctr/infctr-privacypolicy.asp&amp;referrer=&amp;appname=Netscape&amp;appversion=5.0%20%28X11%3B%20Linux%20x86_64%29%20AppleWebKit/537.36%20%28KHTML%2C%20like%20Gecko%29%20HeadlessChrome/69.0.3494.0%20Safari/537.36&amp;cookieOK=Yes&amp;userLanguage=en-US&amp;platform=Linux x86_64&amp;bgColor=%23ffffff&amp;screenResolution=800x600&amp;colorDepth=24&amp;javaOK=No&amp;NSpluginList="></a>
+
+<noscript>
+<A TARGET="_blank" HREF="http://www.webtrendslive.com/redirect.asp?siteID=2740">
+<IMG BORDER="0" WIDTH="1" HEIGHT="1" SRC="http://statse.webtrendslive.com/S001-00-3-9-107326-7863/button3.asp?tagver=1&SiteId=2740&Sid=001-00-3-10-6692-7351&Tz=-500&firstwkday=sunday&Edition=enterprise&Button=&title=NO%20SCRIPT&url=http://noscript&javaOK=No&">
+</A>
+</noscript>
+<!-- END OF WEBTRENDS LIVE TAG -->
+
+
 
 
  
